WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81953
ASSERT(!needsLayout) in RenderView.cpp when visiting
http://www.panic.com/blog/
https://bugs.webkit.org/show_bug.cgi?id=81953
Summary
ASSERT(!needsLayout) in RenderView.cpp when visiting http://www.panic.com/blog/
Anders Carlsson
Reported
2012-03-22 13:05:22 PDT
ASSERT(!needsLayout) in RenderView.cpp when visiting
http://www.panic.com/blog/
Attachments
Patch
(7.63 KB, patch)
2012-03-22 13:16 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(11.86 KB, patch)
2012-03-22 13:36 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-22 13:16:07 PDT
Created
attachment 133330
[details]
Patch
Build Bot
Comment 2
2012-03-22 13:26:53 PDT
Comment on
attachment 133330
[details]
Patch
Attachment 133330
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12116204
Anders Carlsson
Comment 3
2012-03-22 13:36:20 PDT
Created
attachment 133335
[details]
Patch
Sam Weinig
Comment 4
2012-03-22 14:06:47 PDT
Comment on
attachment 133335
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133335&action=review
> Source/WebCore/ChangeLog:42 > +2012-03-22 Anders Carlsson <
andersca@apple.com
> > + > + > + * platform/graphics/ca/GraphicsLayerCA.cpp: > + (WebCore::GraphicsLayerCA::platformCALayerDidCreateTiles): > + * platform/graphics/ca/GraphicsLayerCA.h: > + (GraphicsLayerCA): > + * platform/graphics/ca/PlatformCALayerClient.h: > + (PlatformCALayerClient): > + * platform/graphics/ca/mac/TileCache.mm: > + (WebCore::TileCache::setScale): > + (WebCore::TileCache::revalidateTiles): > +
Double ChangeLog!
Anders Carlsson
Comment 5
2012-03-22 14:15:14 PDT
Committed
r111762
: <
http://trac.webkit.org/changeset/111762
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug