Source/WebCore/platform/graphics/ca/PlatformCALayerClient.h
@@ -59,7 +59,7 @@ public:
     virtual bool platformCALayerDrawsContent() const = 0;
     virtual void platformCALayerLayerDidDisplay(PlatformLayer*) = 0;
 
-    virtual void platformCALayerDidCreateTiles() = 0;
+    virtual void platformCALayerDidCreateTiles(const Vector<FloatRect>& dirtyRects) = 0;
     virtual float platformCALayerDeviceScaleFactor() = 0;
 
 protected:
